--- a/templates/pages/servicesPage.html.twig
+++ b/templates/pages/servicesPage.html.twig
@@ -8,13 +8,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 navB">
-                    <h1>Страница услуг</h1>
-                    <p>Вы офигееите от нашего професионализма<br>где вы найдете еще такую команду? </p>
+                    <h1>Ваш сайт приведет целевой трафик – стоит обратиться к нам!</h1>
+                    <p>Вы офигееите от нашего професионализма<br>где вы найдете еще такую команду?</p>
                 </div>
             </div>
             <div class="row butPos">
                 <div class="col-lg-12 col-md-12 butInNav">
-                    <p>Заказать Услугу</p>
+                    <p>Заказать звонок </p>
                 </div>
             </div>
         </div>
@@ -36,8 +36,9 @@
                 </div>
 
                 <div class="row desScr">
-                    <h2>Обратившись к нам вы получите</h2>
-                    <p>описание услуг </p>
+                    <h2>Как проходит оптимизация сайта?
+                    </h2>
+                    <p>Оптимизация сайта для поисковых систем </p>
                 </div>
 
                 <div class="row fiveBlockContUs">
@@ -49,11 +50,11 @@
                 </div>
 
                 <div class="row fiveBlockInfUs">
-                    <div><p>Lorem ipsum dolor</p></div>
-                    <div><p>Lorem ipsum dolor</p></div>
-                    <div><p>Lorem ipsum dolor</p></div>
-                    <div><p>Lorem ipsum dolor</p></div>
-                    <div><p>Lorem ipsum dolor</p></div>
+                    <div><p>Анализ вашего бизнеса, сайта и конкурентов</p></div>
+                    <div><p>Составление Сео-структуры сайта согласно целям бизнеса</p></div>
+                    <div><p>Внешняя и внутренняя оптимизация вашего сайта</p></div>
+                    <div><p>Установка систем веб-аналитики для сбора данных</p></div>
+                    <div><p>Увеличиваем конверсию, улучшаем качество контента сайта, анализируем показатели систем аналитики</p></div>
                 </div>
 
             </div>
@@ -64,10 +65,31 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 infoServ">
-                        <h1>Описание услуг</h1>
-                        <p>Описание наших услуг</p>
+                        <h1>Зачем заказывать продвижение сайта?</h1>
                         <br>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, amet blanditiis, debitis delectus ea earum excepturi in incidunt ipsam maiores nam natus, optio possimus praesentium quaerat quibusdam ratione reprehenderit tempora. Accusamus accusantium commodi consequatur deleniti dolorem ea earum eos eum excepturi expedita mollitia, numquam porro, quasi quis voluptates! Asperiores cupiditate debitis deleniti dolor eaque error expedita hic maiores possimus quidem, rem reprehenderit unde voluptates. A ad at blanditiis debitis distinctio, eius eligendi et excepturi, facere fuga id impedit ipsam laborum laudantium magnam maiores nam omnis optio perferendis porro possimus quae, quaerat recusandae reprehenderit similique sint tempora ut! Accusantium aliquid amet dolor eligendi eum exercitationem, hic iste laboriosam necessitatibus nesciunt nulla numquam obcaecati, quam, quis quisquam quod rem sed similique voluptas voluptate? A ad, aliquam amet dicta explicabo hic illum nisi porro saepe sint tempora ut veritatis? Autem, dolorem et expedita fugit inventore ipsam itaque maiores mollitia nesciunt nulla repellat soluta voluptatem. Maiores odit quae repellat soluta velit. Animi aut dolor dolore dolorum eaque explicabo facere, hic iure laboriosam modi quas quidem quis sed similique unde. Adipisci aliquid architecto, commodi consequuntur, debitis delectus dolor ducimus error facilis hic illum labore laboriosam laudantium libero magnam maxime nobis omnis perferendis perspiciatis rem sunt!</p>
+                        <p>Понятие бизнеса достаточно обширное, каждый по-своему его определяет, однако можно сказать с полной уверенностью бизнес без клиентов – не бизнес. Как добиться того большого количества показов вашего сайта и переходов на сайт?
+                           <br> Seo-продвижение сайтов – продвижение в органическом поиске Google и Яндекс вашего сайта. Основная цель такого продвижение – увеличение целевого трафика на ваш сайт.</p>
+                        <p><b>За счет чего увеличивается трафик на сайт?</b></p>
+                        <br>
+                        <p>Увеличение трафика на сайт происходит за счет повышения в рейтинге поисковика вашего сайта. В наше время, ведется жёсткая конкуренция за ТОП-10 в поисковике, практически в каждой нише. Согласно статистике 75% людей не переходят на вторую страницу поисковика, если ваш сайт находится не в десятке лучших – стоит бить тревогу.
+                            Проанализировав ваш сайт, мы сможем сделать упор на те сео-комплектующие которые отлично проработаны. Изменив худшие показатели, мы сможем поднять ваш сайт в рейтинге, что даст прилив трафика на вашу страницу.
+                            Увеличение ссылочной массы – закупка платных и бесплатных ссылок на ваш сайт. Полный контроль ссылочной массы и отчётность согласно тарифа купленной вами.
+                            Заказав seo-продвижение у нас, вы можете спокойно следить за продвижением вашей страницы. Еженедельный отчёт отправляется вам на почту по которому вы можете проследить всю нашу работу что сделано, что переделано и что осталось сделать. Такого рода интерактив помогает быть уверенным вам в Сео-продвижении вашей страницы и наших услуг в целом.
+                        </p>
+                        <br>
+                        <p><b>Зачем существует сео-продвижение?</b></p>
+                        <p>Как мы уже определили ранее, поисковое продвижение – это продвижение вашего сайта по рейтингу поисковика, с целью вывести ваш сайт в ТОП показов. Если у вас отсутствует какая-либо сео-оптимизация или сайт создан с большим количеством ошибок вам будет очень сложно продвинуть его как либо, поэтому мы контролирует все показатели вашего сайта вовремя продвижения.
+                        </p>
+                        <br>
+                        <p><b>Seo-продвижение включает в себя:</b></p>
+                        <ul>
+                            <li>Аудит нашего сайта</li>
+                            <li>Аудит сайтов конкурентов</li>
+                            <li>Написание сео-текстов</li>
+                            <li>Сбор семантического ядра</li>
+                            <li>Внешняя сео-оптимизация</li>
+                            <li>Внутренняя сео-оптимизация</li>
+                        </ul>
                     </div>
                 </div>
 
@@ -83,16 +105,16 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 workEx">
                         <div>
-                            <h1>Наши работы</h1>
-                            <p>Тут будут наши примеры работ </p>
+                            <h1>Дополнительные услуги</h1>
+                            <p>Отдельно заказываемые услуги  </p>
                         </div>
                     </div>
                 </div>
                 
                 <div class="row thereBlock">
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                    <div><p>Аудит сайта</p></div>
+                    <div><p>Анализ ссылочной массы</p></div>
+                    <div><p>Разработка семантичекого ядра</p></div>
                 </div>
 
                 <div class="row buttonOuW">
@@ -108,16 +130,16 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 pricSch">
                         <div>
-                            <h1>Какие же расценки</h1>
-                            <p>расписание расценок будет тут</p>
+                            <h1>Три варианта продвижения вашего сайта </h1>
+                            <p>три основных типа продвижения, точная сумма оговаривается лично </p>
                         </div>
                     </div>
                 </div>
                 
                 <div class="row thereMainBlocks">
-                    <div id="radius"></div>
-                    <div id="newCol"></div>
-                    <div id="radiusTwo"></div>
+                    <div id="radius"><p>Seo-продвижение по трафику ОТ какой-то суммы</p></div>
+                    <div id="newCol"><p>Seo-продвижение с гарантиями ТОП – позиций ОТ какой-то суммы</p></div>
+                    <div id="radiusTwo">Seo-продвижение по кластерам ОТ какой-то суммы</div>
                 </div>
 
             </div>
