--- a/public/Services/services.scss
+++ b/public/Services/services.scss
@@ -125,7 +125,6 @@ body {
 }
 
 
-
 .algN {
     display: flex;
     flex-direction: column;
@@ -147,9 +146,10 @@ nav {
     background-color: #363636;
     text-align: center;
     align-items: center;
-    margin-top: 100px;
+    margin: 100px 100px;
     max-width: 300px !important;
     cursor: pointer;
+
 
      p {
          padding: 13px 20px;
@@ -340,16 +340,21 @@ nav {
     display: flex;
     justify-content: center;
     div {
-        margin: 5px 46px;
+        margin: 5px 13px;
+        width: 200px;
+        height: 50px;
+
         p {
-            color: #555555;
+            color: lightgray;
+            font-size: 17px;
+            text-align: center;
         }
     }
 }
 
 .descOfServ {
     width: 100%;
-    height: 725px;
+    height: 1300px;
     background-color: #242424;
 }
 
@@ -366,6 +371,12 @@ nav {
     p {
         color: #cccccc;
         text-align: center;
+    }
+    ul {
+        color: lightgray;
+        li {
+
+        }
     }
 }
 
@@ -469,4 +480,9 @@ nav {
         margin: 5px 25px;
 
     }
+}
+
+
+.navB {
+    padding: 100px 0;
 }
