--- a/templates/pages/aboutUsPage.html.twig
+++ b/templates/pages/aboutUsPage.html.twig
@@ -5,7 +5,7 @@
 <nav class="AbtN">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 col-md-12">
+                <div class="col-lg-12 col-md-12 hText">
                     <h1>Про Нас</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis totam vitae temporibus ipsa
                         nihil iste perspiciatis quis modi aut velit culpa doloremque mollitia dolor facere, deleniti
@@ -50,9 +50,7 @@
         <div class="bgBl"></div>
 
 
-
     </section>
-
 
 
 
@@ -63,7 +61,7 @@
                 <p>Lorem ipsum dolor sit amet.</p>
             </div>
             <div class="row">
-                <div class="col-lg-12 col-md-12">
+                <div class="col-lg-12 col-md-12 imgV">
                     <img class="imgInfValu" src="/img/Shape.png" alt="shape">
                 </div>
             </div>
@@ -110,12 +108,10 @@
                     <div class="conFImg">
                         <div class="oneObj">
                             <i class="fas fa-phone"></i>
-                            <!-- <img src="/OctoWiceNew/img/Phone.svg" alt="phone"> -->
                             <p><small>38(066)010-51-78</small></p>
                         </div>
                         <div class="twoObj">
                             <i class="fas fa-envelope"></i>
-                            <!-- <img src="/OctoWiceNew/img/Mail.svg" alt="mail"> -->
                             <p><small>octowice@gmail.com</small></p>
                         </div>
                     </div>
