--- a/public/AboutUS/aboutUs.css
+++ b/public/AboutUS/aboutUs.css
@@ -245,4 +245,8 @@ nav {
     margin: 20px 19px;
     padding: 80px 0; }
 
+.hText {
+  text-align: center;
+  padding: 50px 0; }
+
 /*# sourceMappingURL=aboutUs.css.map */
