--- a/public/Services/services.scss
+++ b/public/Services/services.scss
@@ -412,7 +412,13 @@ nav {
         height: 350px;
         background-color: #555555;
         margin: 0 15px;
-        border-radius: 10px;
+        border-radiusradius: 10px;
+        p {
+            text-align: center;
+            color: white !important;
+            margin-top: 300px;
+            font-size: 20px;
+        }
     }
 }
 
@@ -464,13 +470,47 @@ nav {
         height: 550px !important;
         position: relative;
         bottom: 25px;
+        p {
+            background-color: #999999 !important;
+            border-radius: 25px 25px 0 0;
+            padding: 5px;
+            text-align: center;
+            border-bottom: 7px solid black;
+            font-size: 25px;
+        }
+        h1 {
+            text-align: center;
+        }
     }
 
+
     #radius {
-        border-radius: 50px 0 0 50px;
+        border-radius: 25px 0 0 25px;
+        -moz-border-radius: 25px 0 0 25px;
+        -webkit-border-radius: 25px 0 0 25px;
+        p {
+            background-color: #999999 !important;
+            border-radius: 25px 25px 0 25px;
+            -moz-border-radius: 25px 0 0 25px;
+            -webkit-border-radius: 25px 0 0 25px;
+            padding: 5px 35px 5px 5px;
+            text-align: right;
+            border-bottom: 7px solid black;
+            font-size: 25px;
+
+        }
     }
+
     #radiusTwo {
         border-radius: 0 50px 50px 0;
+        p {
+            background-color: #999999 !important;
+            border-radius: 0 50px 50px 0;
+            padding: 5px 5px 5px 35px;
+            text-align: left;
+            border-bottom: 7px solid black;
+            font-size: 25px;
+        }
     }
 
     div {
@@ -481,6 +521,7 @@ nav {
 
     }
 }
+
 
 
 .navB {
