--- a/templates/pages/servicesPage.html.twig
+++ b/templates/pages/servicesPage.html.twig
@@ -137,20 +137,34 @@
                 </div>
                 
                 <div class="row thereMainBlocks">
-                    <div id="radius"><p>Seo-продвижение по трафику ОТ какой-то суммы</p></div>
-                    <div id="newCol"><p>Seo-продвижение с гарантиями ТОП – позиций ОТ какой-то суммы</p></div>
-                    <div id="radiusTwo">Seo-продвижение по кластерам ОТ какой-то суммы</div>
+                    <div id="radius"><p>Тариф</p></div>
+                    <div id="newCol">
+                        <p>Тариф</p>
+                        <ul>
+                            <li>123</li>
+                            <li>123</li>
+                            <li>123</li>
+                            <li>123</li>
+                            <li>123</li>
+                            <li>123</li>
+                            <li>123</li>
+                        </ul>
+                        <h1>Цена: 666 грн</h1>
+                    </div>
+                    <div id="radiusTwo"><p>Тариф</p></div>
                 </div>
 
             </div>
         </section>
 
     </main>
+
     <div class="container">
         {{ render_esi(url(
             'contacts'
         )) }}
     </div>
+
 {% endblock %}
 
 
