--- a/public/Services/services.css
+++ b/public/Services/services.css
@@ -302,7 +302,12 @@ nav {
     height: 350px;
     background-color: #555555;
     margin: 0 15px;
-    border-radius: 10px; }
+    border-radiusradius: 10px; }
+    .thereBlock div p {
+      text-align: center;
+      color: white !important;
+      margin-top: 300px;
+      font-size: 20px; }
 
 .buttonOuW {
   display: flex;
@@ -340,10 +345,37 @@ nav {
     height: 550px !important;
     position: relative;
     bottom: 25px; }
+    .thereMainBlocks #newCol p {
+      background-color: #999999 !important;
+      border-radius: 25px 25px 0 0;
+      padding: 5px;
+      text-align: center;
+      border-bottom: 7px solid black;
+      font-size: 25px; }
+    .thereMainBlocks #newCol h1 {
+      text-align: center; }
   .thereMainBlocks #radius {
-    border-radius: 50px 0 0 50px; }
+    border-radius: 25px 0 0 25px;
+    -moz-border-radius: 25px 0 0 25px;
+    -webkit-border-radius: 25px 0 0 25px; }
+    .thereMainBlocks #radius p {
+      background-color: #999999 !important;
+      border-radius: 25px 25px 0 25px;
+      -moz-border-radius: 25px 0 0 25px;
+      -webkit-border-radius: 25px 0 0 25px;
+      padding: 5px 35px 5px 5px;
+      text-align: right;
+      border-bottom: 7px solid black;
+      font-size: 25px; }
   .thereMainBlocks #radiusTwo {
     border-radius: 0 50px 50px 0; }
+    .thereMainBlocks #radiusTwo p {
+      background-color: #999999 !important;
+      border-radius: 0 50px 50px 0;
+      padding: 5px 5px 5px 35px;
+      text-align: left;
+      border-bottom: 7px solid black;
+      font-size: 25px; }
   .thereMainBlocks div {
     width: 300px;
     height: 500px;
