--- a/public/Services/services.scss
+++ b/public/Services/services.scss
@@ -475,9 +475,10 @@ nav {
             border-radius: 25px 25px 0 0;
             padding: 5px;
             text-align: center;
-            border-bottom: 7px solid black;
+            border-bottom: 7px solid #222222;
             font-size: 25px;
         }
+
         h1 {
             text-align: center;
         }
@@ -490,12 +491,12 @@ nav {
         -webkit-border-radius: 25px 0 0 25px;
         p {
             background-color: #999999 !important;
-            border-radius: 25px 25px 0 25px;
-            -moz-border-radius: 25px 0 0 25px;
-            -webkit-border-radius: 25px 0 0 25px;
+            border-radius: 25px 25px 0 0;
+            -moz-border-radius: 25px 0 0 0;
+            -webkit-border-radius: 25px 0 0 0;
             padding: 5px 35px 5px 5px;
             text-align: right;
-            border-bottom: 7px solid black;
+            border-bottom: 7px solid #222222;
             font-size: 25px;
 
         }
@@ -505,10 +506,10 @@ nav {
         border-radius: 0 50px 50px 0;
         p {
             background-color: #999999 !important;
-            border-radius: 0 50px 50px 0;
+            border-radius: 0 25px 0 0;
             padding: 5px 5px 5px 35px;
             text-align: left;
-            border-bottom: 7px solid black;
+            border-bottom: 7px solid #222222;
             font-size: 25px;
         }
     }
