--- a/public/mediaOcto/media.css
+++ b/public/mediaOcto/media.css
@@ -310,7 +310,7 @@
 
     .octH h1 {
         font-size: 30px;
-        margin-top: 0px !important;
+        margin-top: 0 !important;
     }
 
     .imgR img {
@@ -881,7 +881,7 @@
 
     .octH h1 {
         font-size: 30px;
-        margin-top: 0px !important;
+        margin-top: 0 !important;
     }
 
     .imgR img {
