--- a/templates/pages/servicesPage.html.twig
+++ b/templates/pages/servicesPage.html.twig
@@ -137,21 +137,31 @@
                 </div>
                 
                 <div class="row thereMainBlocks">
-                    <div id="radius"><p>Тариф</p></div>
-                    <div id="newCol">
-                        <p>Тариф</p>
+                    <div id="radius"><p>Пакет Start:</p>
                         <ul>
-                            <li>123</li>
-                            <li>123</li>
-                            <li>123</li>
-                            <li>123</li>
-                            <li>123</li>
-                            <li>123</li>
-                            <li>123</li>
+                            <li>Количество страниц: до 3 страниц</li>
+                            <li>Количество запросов: до 30 запросов</li>
+                            <li>Сроки от 1 – 2  месяца</li>
                         </ul>
-                        <h1>Цена: 666 грн</h1>
+                        <h1>Цена: от 3.000 грн</h1>
                     </div>
-                    <div id="radiusTwo"><p>Тариф</p></div>
+                    <div id="newCol">
+                        <p>Пакет High:</p>
+                        <ul>
+                            <li>Количество страниц: от 20 страниц</li>
+                            <li>Количество запросов: от 150 запросов</li>
+                            <li>Сроки от 1 – 2  месяца</li>
+                        </ul>
+                        <h1>Цена: от 9.000 грн</h1>
+                    </div>
+                    <div id="radiusTwo"><p>Пакет Medium:</p>
+                        <ul>
+                            <li>Количество страниц: до 20 страниц</li>
+                            <li>Количество запросов: до 200 запросов</li>
+                            <li>Сроки от 1 – 2  месяца</li>
+                        </ul>
+                        <h1>Цена: от 6.000 грн</h1>
+                    </div>
                 </div>
 
             </div>
