--- a/templates/pages/aboutUsPage.html.twig
+++ b/templates/pages/aboutUsPage.html.twig
@@ -87,9 +87,47 @@
             </div>
 
             <div class="row blInW">
-                <div class="col-lg-4 col-md-4 blockW">1</div>
-                <div class="col-lg-4 col-md-4 blockW">1</div>
-                <div class="col-lg-4 col-md-4 blockW">1</div>
+
+                <div class="col-lg-4 col-md-4 blockW">
+                    <div id="infW">
+                        <img src="" alt="">
+                    </div>
+                </div>
+
+
+                <div class="col-lg-4 col-md-4 blockW">
+                    <div id="infW">
+                        <img src="" alt="">
+                    </div>
+                </div>
+
+
+                <div class="col-lg-4 col-md-4 blockW">
+                    <div id="infW">
+                        <img src="" alt="">
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 blockW">
+                    <div id="infW">
+                        <img src="" alt="">
+                    </div>
+                </div>
+
+
+                <div class="col-lg-4 col-md-4 blockW">
+                    <div id="infW">
+                        <img src="" alt="">
+                    </div>
+                </div>
+
+
+                <div class="col-lg-4 col-md-4 blockW">
+                    <div id="infW">
+                        <img src="" alt="">
+                    </div>
+                </div>
+
             </div>
 
         </div>
