--- a/public/AboutUS/aboutUs.css
+++ b/public/AboutUS/aboutUs.css
@@ -217,16 +217,17 @@ nav {
 .twBlInVal {
   z-index: 100;
   color: #979797;
-  text-align: center; }
+  text-align: center;
+  padding: 10px 0; }
   .twBlInVal p {
     display: inline;
-    padding: 0 75px;
+    padding: 0 55px;
     font-size: 25px; }
 
 .ourWork {
   background-color: #363636;
   width: 100%;
-  height: 1000px; }
+  height: 1300px; }
 
 .infInWork {
   text-align: center;
@@ -238,15 +239,19 @@ nav {
     color: lightgray;
     font-weight: 300; }
 
-.blInW {
-  background-color: black; }
-  .blInW .blockW {
-    border-radius: 10px;
-    margin: 20px 19px;
-    padding: 80px 0; }
+.blInW .blockW {
+  margin: 35px 0; }
+.blInW #infW {
+  background-color: #313131;
+  width: 300px;
+  height: 450px; }
 
 .hText {
   text-align: center;
   padding: 50px 0; }
+
+.imgV img {
+  width: 100%;
+  height: auto; }
 
 /*# sourceMappingURL=aboutUs.css.map */
