--- a/public/AboutUS/aboutUs.scss
+++ b/public/AboutUS/aboutUs.scss
@@ -293,9 +293,10 @@ body {
     z-index: 100;
     color: #979797;
     text-align: center;
+    padding: 10px 0;
     p {
         display: inline;
-        padding: 0 75px;
+        padding: 0 55px;
         font-size: 25px;
     }
 }
@@ -304,7 +305,7 @@ body {
 .ourWork {
     background-color: #363636;
     width: 100%;
-    height: 1000px;
+    height: 1300px;
 }
 
 .infInWork {
@@ -322,12 +323,15 @@ body {
 }
 
 .blInW {
-    background-color: black;
-    
+
     .blockW {
-        border-radius: 10px;
-     margin: 20px 19px;
-     padding: 80px 0;
+        margin: 35px 0;
+    }
+
+    #infW {
+        background-color: #313131;
+        width: 300px;
+        height: 450px;
     }
 }
 
@@ -336,3 +340,9 @@ body {
     text-align: center;
     padding: 50px 0;
 }
+
+.imgV img {
+    width: 100%;
+    height: auto;
+}
+
