--- a/templates/pages/servicesPage.html.twig
+++ b/templates/pages/servicesPage.html.twig
@@ -139,28 +139,36 @@
                 <div class="row thereMainBlocks">
                     <div id="radius"><p>Пакет Start:</p>
                         <ul>
-                            <li>Количество страниц: до 3 страниц</li>
-                            <li>Количество запросов: до 30 запросов</li>
-                            <li>Сроки от 1 – 2  месяца</li>
+                            <li>Функции определено в описании макета</li>
+                            <li>Корзина</li>
+                            <li>Шаблонный дизайн</li>
+                            <li>Ограниченный функционал Админ панели</li>
+                            <li>Сроки от 7  дней</li>
                         </ul>
-                        <h1>Цена: от 3.000 грн</h1>
+                        <h1>Цена: от 6.000 грн</h1>
                     </div>
                     <div id="newCol">
                         <p>Пакет High:</p>
                         <ul>
-                            <li>Количество страниц: от 20 страниц</li>
-                            <li>Количество запросов: от 150 запросов</li>
+                            <li>Функционал обсуждается лично</li>
+                            <li>От 15 страниц</li>
+                            <li>Корзина</li>
+                            <li>Индивидуальный дизайн</li>
+                            <li>Полноценная админ панель – корзина</li>
                             <li>Сроки от 1 – 2  месяца</li>
                         </ul>
                         <h1>Цена: от 9.000 грн</h1>
                     </div>
                     <div id="radiusTwo"><p>Пакет Medium:</p>
                         <ul>
-                            <li>Количество страниц: до 20 страниц</li>
-                            <li>Количество запросов: до 200 запросов</li>
-                            <li>Сроки от 1 – 2  месяца</li>
+                            <li>Функционал обсуждается лично</li>
+                            <li>До 15 страниц</li>
+                            <li>Корзина</li>
+                            <li>Индивидуальный дизайн</li>
+                            <li>Полноценная админ панель</li>
+                            <li>Сроки от 1-2 мес</li>
                         </ul>
-                        <h1>Цена: от 6.000 грн</h1>
+                        <h1>Цена: от 15.000 грн</h1>
                     </div>
                 </div>
 
